# wasmer

./: .gitignore  Cargo.toml  hc-publish.sh
lib/api/: CMakeLists.txt  Cargo.toml  build.rs
lib/api/macro-wasmer-universal-test/: Cargo.toml
lib/cache/: Cargo.toml
lib/cli/: Cargo.toml
lib/cli/src/commands/: mod.rs
lib/compiler/: Cargo.toml
lib/compiler-cranelift/: Cargo.toml
lib/compiler-llvm/: Cargo.toml
lib/compiler-singlepass/: Cargo.toml
lib/derive/: Cargo.toml
lib/middlewares/: Cargo.toml
lib/object/: Cargo.toml
lib/types/: Cargo.toml
lib/vm/: Cargo.toml
tests/integration/cli/: Cargo.toml
tests/integration/cli/tests/: run.rs
