[package]
name = "hc-wasmer-middlewares"
description = "A collection of various useful middlewares"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wasmer = { package = "hc-wasmer", path = "../api", version = "=4.3.6-hc.0", default-features = false, features = ["compiler"] }
wasmer-types = { package = "hc-wasmer-types", path = "../types", version = "=4.3.6-hc.0" }
wasmer-vm = { package = "hc-wasmer-vm", path = "../vm", version = "=4.3.6-hc.0" }

[dev-dependencies]
wasmer = { package = "hc-wasmer", path = "../api", version = "=4.3.6-hc.0", features = ["compiler"] }

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
