[package]
name = "hc-wasmer-object"
description = "Wasmer Native Object generator"
categories = ["wasm"]
keywords = ["wasm", "webassembly"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wasmer-types = { package = "hc-wasmer-types", path = "../types", version = "=4.3.6-hc.1" }
object = { version = "0.29.0", default-features = false, features = ["write"] }
thiserror = "1.0"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
